syntax = "proto3";
option java_package = "ru.hse";

import "game.proto";

message JoinToRoomRequest {
  string login = 1;
  string roomName = 2; // if empty string room is public, else it's private
}


message RoomEvent {
    oneof event {
        // ROOM EVENTS
        PlayerJoinedEvent playerJoinedEvent = 1;
        PlayerDisconnectedEvent playerDisconnectedEvent = 2;
        JoinStatusEvent roomStateEvent = 3;

        // GAME EVENTS
        GameStartedEvent gameStartedEvent = 4;
        GameStateUpdatedEvent gameStateUpdatedEvent = 5;
        GameFinishedEvent gameFinishedEvent = 6;
    }
}

message PlayerJoinedEvent {
  string playerLogin = 1;
}

message PlayerDisconnectedEvent {
  string playerLogin = 1;
}

message JoinStatusEvent {
  bool success = 1;
  string comment = 2;
}

message GameStartedEvent {
  GameState gameState = 1;
  PlayerList players = 2;
}


message GameStateUpdatedEvent {
  GameState gameState = 1;
}

message GameFinishedEvent {
  string reason = 1; // took place / win / defeated by
}

message PlayerLostEvent { // other player lost
  string playerLogin = 1;
}

service roomEventsService {
    rpc joinToRoom(JoinToRoomRequest) returns (stream RoomEvent);
}